--- a/styles/desk.css
+++ b/styles/desk.css
@@ -2,29 +2,32 @@
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  gap: 40px;
-  justify-content: space-between;
+  gap: 20px;
+  padding: 16px;
 }
 
 .desk {
-  width: 360px;
+  width: 350px;
   height: 600px;
-  background-color: rgb(225, 247, 247);
+  background-color: rgba(225, 247, 247, 0.616);
+  box-shadow: var(--shadow);
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
-  overflow: hidden;
+  justify-content: space-between;
+  flex-grow: 0;
+  flex-shrink: 0;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .desk__header {
   height: 50px;
-  background-color: rgba(137, 43, 226, 0.527);
+  background-color: rgba(5, 48, 4, 0.527);
   display: flex;
   justify-content: space-between;
-  padding: 0 10px;
-  align-items: center;
+  padding: 10px 15px;
 }
 
 .desk__header-title,
@@ -33,13 +36,13 @@
   text-shadow: var(--shadow);
 }
 
-.desc__todo-content {
-  height: 600px;
-  padding: 20px 10px;
+.desk__todo-content {
+  overflow-y: auto;
+  height: 500px;
+  padding: 1em 0.5em;
   display: flex;
-  justify-content: flex-start;
   flex-direction: column;
-  gap: 20px;
+  gap: 1em;
 }
 
 .desk__btn-add,
@@ -52,16 +55,34 @@
   justify-content: center;
   align-items: center;
   font-size: 20px;
-  background-color: rgba(22, 218, 64, 0.541);
+  background-color: rgb(1, 90, 20);
   color: white;
   text-shadow: var(--shadow);
 }
 
 .desk__btn-remove-all {
-  background-color: rgba(240, 8, 8, 0.459);
+  background-color: rgba(240, 8, 8, 0.781);
 }
 
 .desk__btn-add:hover,
 .desk__btn-remove-all:hover {
   opacity: 0.5;
+}
+
+.desk--progress {
+  justify-content: flex-start;
+}
+
+.header--in--progress {
+  background-color: rgba(128, 128, 128, 0.568);
+}
+
+.header--done {
+  background-color: rgba(128, 0, 128, 0.548);
+}
+
+@media (max-width: 1280px) {
+  .desk {
+    width: 300px;
+  }
 }
