--- a/styles/form.css
+++ b/styles/form.css
@@ -16,22 +16,19 @@
 }
 
 .new-todo__title {
-  padding: 0.5em;
-  font-size: var(--font-sz-3);
+  padding: 8px;
+  font-size: 16px;
 }
 .new-todo__description {
-  padding: 0.5em;
-  font-size: var(--font-sz-4);
+  padding: 10px;
+  font-size: 20px;
   resize: none;
 }
-.new-todo__buttons {
-}
-
 .new-todo__cancel,
 .new-todo__add {
-  padding: 0.5em 1em;
+  padding: 8px 16px;
   border: none;
-  font-size: var(--font-sz-3);
+  font-size: 16px;
   background-color: coral;
   cursor: pointer;
 }
