--- a/styles/todo.css
+++ b/styles/todo.css
@@ -5,8 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  background-color: white;
-  width: 95%;
+  background-color: rgb(255, 255, 255);
 }
 
 .todo__header {
@@ -17,7 +16,7 @@
 }
 
 .todo__title {
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 700;
 }
 
@@ -42,7 +41,17 @@
   justify-content: space-between;
 }
 
-.todo__user,
+.todo__user {
+  font-size: 16px;
+}
 .todo__date {
-  font-size: 20px;
+  font-size: 16px;
+}
+
+.todo--done {
+  background-color: rgba(128, 0, 128, 0.288);
+}
+
+.todo--in-progress {
+  background-color: rgba(128, 128, 128, 0.164);
 }
